:bug: Fix QuickSettings is overlapped by editor scrollbar, #279

--- a/styles/minimap.less
+++ b/styles/minimap.less
@@ -77,6 +77,7 @@ atom-text-editor::shadow, atom-text-editor {
 
 minimap-quick-settings {
   position: absolute !important;
+  z-index: 5;
 
   .hidden-input {
     position: absolute;
